--- a/USACOW/CMakeLists.txt
+++ b/USACOW/CMakeLists.txt
@@ -326,8 +326,8 @@ add_executable(sp "Past Contests/2020 - 2021/Gold/X 1. 2019 December Gold/X 3. S
 set_target_properties(sp PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2020 - 2021/Gold/X 1. 2019 December Gold/X 3. Square Pasture/")
 add_executable(skilevel "Past Contests/2013 - 2014/Gold/X 3. 2014 January Gold/Y 3. Ski Course Rating/skilevel.cpp")
 set_target_properties(skilevel PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2013 - 2014/Gold/X 3. 2014 January Gold/Y 3. Ski Course Rating")
-add_executable(leftout "Past Contests/2018 - 2019/Silver/X 4. 2019 US Open Silver/X 1. Left Out/leftout.cpp")
-set_target_properties(leftout PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2018 - 2019/Silver/X 4. 2019 US Open Silver/X 1. Left Out")
+add_executable(leftout "Past Contests/2018 - 2019/Silver/X 4. 2019 US Open Silver/Y 1. Left Out/leftout.cpp")
+set_target_properties(leftout PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2018 - 2019/Silver/X 4. 2019 US Open Silver/Y 1. Left Out")
 add_executable(cowjump "Past Contests/2018 - 2019/Silver/X 4. 2019 US Open Silver/X 2. Cow Steeplechase II/cowjump.cpp")
 set_target_properties(cowjump PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2018 - 2019/Silver/X 4. 2019 US Open Silver/X 2. Cow Steeplechase II")
 add_executable(citystate "Past Contests/2016 - 2017/Silver/Y 1. 2016 December Silver/Y 2. Cities and States/citystate.cpp")
