--- a/USACOW/CMakeLists.txt
+++ b/USACOW/CMakeLists.txt
@@ -345,3 +345,9 @@ add_executable(reduce "Past Contests/2015 - 2016/Silver/Y 4. 2016 US Open Silver
 set_target_properties(reduce PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2015 - 2016/Silver/Y 4. 2016 US Open Silver/Y 1. Field Reduction")
 add_executable(cereal "Past Contests/2019 - 2020/Silver/X 4. 2020 US Open Silver/X 2. Cereal/cereal.cpp")
 set_target_properties(cereal PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2019 - 2020/Silver/X 4. 2020 US Open Silver/X 2. Cereal")
+add_executable(fairphoto_silver "Past Contests/2013 - 2014/Silver/X 6. 2014 US Open Silver/X 1. Fair Photography/fairphoto_silver.cpp")
+set_target_properties(fairphoto_silver PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2013 - 2014/Silver/X 6. 2014 US Open Silver/X 1. Fair Photography")
+add_executable(gpsduel "Past Contests/2013 - 2014/Silver/X 6. 2014 US Open Silver/X 2. Dueling GPSs/gpsduel.cpp")
+set_target_properties(gpsduel PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2013 - 2014/Silver/X 6. 2014 US Open Silver/X 2. Dueling GPSs")
+add_executable(odometer_silver "Past Contests/2013 - 2014/Silver/X 6. 2014 US Open Silver/X 3. Odometer/odometer_silver.cpp")
+set_target_properties(odometer_silver PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2013 - 2014/Silver/X 6. 2014 US Open Silver/X 3. Odometer")
