--- a/USACOW/CMakeLists.txt
+++ b/USACOW/CMakeLists.txt
@@ -343,8 +343,8 @@ add_executable(where "Past Contests/2016 - 2017/Silver/Y 4. 2017 US Open Silver/
 set_target_properties(where PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2016 - 2017/Silver/Y 4. 2017 US Open Silver/Y 3. Where's Bessie?")
 add_executable(reduce "Past Contests/2015 - 2016/Silver/Y 4. 2016 US Open Silver/Y 1. Field Reduction/reduce.cpp")
 set_target_properties(reduce PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2015 - 2016/Silver/Y 4. 2016 US Open Silver/Y 1. Field Reduction")
-add_executable(cereal "Past Contests/2019 - 2020/Silver/X 4. 2020 US Open Silver/X 2. Cereal/cereal.cpp")
-set_target_properties(cereal PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2019 - 2020/Silver/X 4. 2020 US Open Silver/X 2. Cereal")
+add_executable(cereal "Past Contests/2019 - 2020/Silver/X 4. 2020 US Open Silver/Y 2. Cereal/cereal.cpp")
+set_target_properties(cereal PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2019 - 2020/Silver/X 4. 2020 US Open Silver/Y 2. Cereal")
 add_executable(fairphoto_silver "Past Contests/2013 - 2014/Silver/X 6. 2014 US Open Silver/X 1. Fair Photography/fairphoto_silver.cpp")
 set_target_properties(fairphoto_silver PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2013 - 2014/Silver/X 6. 2014 US Open Silver/X 1. Fair Photography")
 add_executable(gpsduel "Past Contests/2013 - 2014/Silver/X 6. 2014 US Open Silver/X 2. Dueling GPSs/gpsduel.cpp")
