Solved Cow Poetry

--- a/USACOW/CMakeLists.txt
+++ b/USACOW/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_CXX_STANDARD 11)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS_DEBUG} -DLOCAL")
 
-set(GCC_COVERAGE_COMPILE_FLAGS "-Wall -Wextra -pedantic -O2 -Wshadow -Wformat=2 -Wfloat-equal -Wlogical-op -Wshift-overflow=2 -Wduplicated-cond -Wcast-qual -Wcast-align -D_GLIBCXX_DEBUG -D_GLIBCXX_DEBUG_PEDANTIC -D_FORTIFY_SOURCE=2 -fsanitize=address -fsanitize=undefined -fno-sanitize-recover -fstack-protector")
+set(GCC_COVERAGE_COMPILE_FLAGS "-Wall -Wextra -O2 -Wshadow -fsanitize=address -fsanitize=undefined")
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
 
 add_executable(test "Training/Chapter 1/Y Section 1.2/Y 1. Test/test.cpp")
@@ -225,8 +225,8 @@ add_executable(clocktree "Past Contests/2019 - 2020/Silver/Y 3. 2020 February Si
 set_target_properties(clocktree PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2019 - 2020/Silver/Y 3. 2020 February Silver/Y 3. Clock Tree")
 add_executable(rblock "Past Contests/2013 - 2014/Silver/X 4. 2014 February Silver/Y 2. Roadblock/rblock.cpp")
 set_target_properties(rblock PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2013 - 2014/Silver/X 4. 2014 February Silver/Y 2. Roadblock")
-add_executable(shortcut "Past Contests/2018 - 2019/Gold/X 2. 2019 January Gold/Y 3. Shortcut/shortcut.cpp")
-set_target_properties(shortcut PROPERTIES RUNTIME_OUTPUT_DIRECTORY "Past Contests/2018 - 2019/Gold/X 2. 2019 January Gold/Y 3. Shortcut")
+add_executable(shortcut "Past Contests/2018 - 2019/Gold/Y 2. 2019 January Gold/Y 3. Shortcut/shortcut.cpp")
+set_target_properties(shortcut PROPERTIES RUNTIME_OUTPUT_DIRECTORY "Past Contests/2018 - 2019/Gold/Y 2. 2019 January Gold/Y 3. Shortcut")
 add_executable(msched_silver "Past Contests/2012 - 2013/Silver/X 4. 2013 February Silver/Y 3. Milk Scheduling/msched_silver.cpp")
 set_target_properties(msched_silver PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2012 - 2013/Silver/X 4. 2013 February Silver/Y 3. Milk Scheduling")
 add_executable(poker "Past Contests/2012 - 2013/Silver/X 5. 2013 March Silver/Y 1. Poker Hands/poker.cpp")
@@ -247,8 +247,8 @@ add_executable(truth "Past Contests/2012 - 2013/Bronze/X 5. 2013 January Bronze/
 set_target_properties(truth PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2012 - 2013/Bronze/X 5. 2013 January Bronze/X 3. Liars and Truth Tellers")
 add_executable(talent "Past Contests/2017 - 2018/Gold/X 4. 2018 US Open Gold/Y 3. Talent Show/talent.cpp")
 set_target_properties(talent PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2017 - 2018/Gold/X 4. 2018 US Open Gold/Y 3. Talent Show")
-add_executable(poetry "Past Contests/2018 - 2019/Gold/X 2. 2019 January Gold/X 1. Cow Poetry/poetry.cpp")
-set_target_properties(poetry PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2018 - 2019/Gold/X 2. 2019 January Gold/X 1. Cow Poetry")
+add_executable(poetry "Past Contests/2018 - 2019/Gold/Y 2. 2019 January Gold/Y 1. Cow Poetry/poetry.cpp")
+set_target_properties(poetry PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2018 - 2019/Gold/Y 2. 2019 January Gold/Y 1. Cow Poetry")
 add_executable(homework "Past Contests/2017 - 2018/Silver/Y 1. 2017 December Silver/Y 1. My Cow Ate My Homework/homework.cpp")
 set_target_properties(homework PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2017 - 2018/Silver/Y 1. 2017 December Silver/Y 1. My Cow Ate My Homework")
 add_executable(measurement "Past Contests/2017 - 2018/Silver/Y 1. 2017 December Silver/Y 2. Milk Measurement/measurement.cpp")
@@ -265,8 +265,8 @@ add_executable(nocross "Past Contests/2016 - 2017/Gold/Y 3. 2017 February Gold/Y
 set_target_properties(nocross PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2016 - 2017/Gold/Y 3. 2017 February Gold/Y 2. Why Did the Cow Cross the Road II")
 add_executable(palpath_gold "Past Contests/2014 - 2015/Gold/X 2. Palindromic Paths/palpath_gold.cpp")
 set_target_properties(palpath_gold PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2014 - 2015/Gold/X 2. Palindromic Paths")
-add_executable(sleepy "Past Contests/2018 - 2019/Gold/X 2. 2019 January Gold/Y 2. Sleepy Cow Sorting/sleepy.cpp")
-set_target_properties(sleepy PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2018 - 2019/Gold/X 2. 2019 January Gold/Y 2. Sleepy Cow Sorting")
+add_executable(sleepy "Past Contests/2018 - 2019/Gold/Y 2. 2019 January Gold/Y 2. Sleepy Cow Sorting/sleepy.cpp")
+set_target_properties(sleepy PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2018 - 2019/Gold/Y 2. 2019 January Gold/Y 2. Sleepy Cow Sorting")
 add_executable(mincross "Past Contests/2016 - 2017/Platinum/X 3. 2017 February Platinum/mincross.cpp")
 set_target_properties(mincross PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2016 - 2017/Platinum/X 3. 2017 February Platinum")
 add_executable(brute_minforce "Past Contests/2016 - 2017/Platinum/X 3. 2017 February Platinum/brute_minforce.cpp")
