Greedy Tree Matching Solution

--- a/CSES/CMakeLists.txt
+++ b/CSES/CMakeLists.txt
@@ -51,9 +51,9 @@ add_executable(Restaurant_Customers "X 2. Sorting and Searching/Y 5. Restaurant 
 add_executable(Dice_Combinations "X 3. Dynamic Programming/Y 44. Dice Combinations.cpp")
 add_executable(Course_Schedule_II "X 11. Additional Problems/X 47. Course Schedule II.cpp")
 add_executable(Investigation "X 4. Graph Algorithms/Y 18. Investigation.cpp")
-add_executable(Subordinates "X 6. Tree Algorithms/Y 111. Subordinates.cpp")
-add_executable(Tree_Diameter "X 6. Tree Algorithms/Y 113. Tree Diameter.cpp")
-add_executable(Tree_Distances_I "X 6. Tree Algorithms/Y 114. Tree Distances I.cpp")
+add_executable(Subordinates "X 6. Tree Algorithms/Y 1. Subordinates.cpp")
+add_executable(Tree_Diameter "X 6. Tree Algorithms/Y 3. Tree Diameter.cpp")
+add_executable(Tree_Distances_I "X 6. Tree Algorithms/Y 4. Tree Distances I.cpp")
 add_executable(Removing_Digits "X 3. Dynamic Programming/Y 48. Removing Digits.cpp")
 add_executable(Grid_Paths_1 "X 3. Dynamic Programming/Y 49. Grid Paths.cpp")
 add_executable(Subarray_Sums_I "X 2. Sorting and Searching/Y 27. Subarray Sums I.cpp")
@@ -84,7 +84,7 @@ add_executable(Bit_Inversions "X 11. Additional Problems/Y 26. Bit Inversions.cp
 add_executable(Subarray_Sums_II "X 2. Sorting and Searching/Y 28. Subarray Sums II.cpp")
 add_executable(Subarray_Divisibility "X 2. Sorting and Searching/Y 29. Subarray Divisibility.cpp")
 add_executable(Forest_Queries "X 5. Range Queries/Y 7. Forest Queries.cpp")
-add_executable(Tree_Distances_II "X 6. Tree Algorithms/Y 115. Tree Distances II.cpp")
+add_executable(Tree_Distances_II "X 6. Tree Algorithms/Y 5. Tree Distances II.cpp")
 add_executable(Movie_Festival_II "X 2. Sorting and Searching/Y 34. Movie Festival II.cpp")
 add_executable(Stick_Divisions "X 11. Additional Problems/X 65. Stick Divisions.cpp")
 add_executable(Number_Spiral "X 1. Introductory Problems/Y 6. Number Spiral.cpp")
@@ -92,10 +92,7 @@ add_executable(Two_Sets_II "X 3. Dynamic Programming/Y 56. Two Sets II.cpp")
 add_executable(List_Removals "X 5. Range Queries/Y 9. List Removals.cpp")
 add_executable(Salary_Queries "X 5. Range Queries/Y 10. Salary Queries.cpp")
 add_executable(Increasing_Subsequence_II "X 11. Additional Problems/Y 24. Increasing Subsequence II.cpp")
-add_executable(Subtree_Queries "X 6. Tree Algorithms/Y 120. Subtree Queries.cpp")
-add_executable(Company_Queries_I "X 6. Tree Algorithms/Y 116. Company Queries I.cpp")
-add_executable(Company_Queries_II "X 6. Tree Algorithms/X 117. Company Queries II.cpp")
-add_executable(Tree_Matching "X 6. Tree Algorithms/Y 112. Tree Matching.cpp")
+add_executable(Company_Queries_I "X 6. Tree Algorithms/Y 6. Company Queries I.cpp")
 add_executable(Common_Divisors "X 7. Mathematics/Y 5. Common Divisors.cpp")
 add_executable(Hotel_Queries "X 5. Range Queries/Y 8. Hotel Queries.cpp")
 add_executable(Edit_Distance "X 3. Dynamic Programming/Y 52. Edit Distance.cpp")
@@ -105,7 +102,7 @@ add_executable(Coding_Company "X 11. Additional Problems/X 66. Coding Company.cp
 add_executable(Hamiltonian_Flights "X 4. Graph Algorithms/Y 31. Hamiltonian Flights.cpp")
 add_executable(Maximum_Subarray_Sum_II "X 2. Sorting and Searching/Y 35. Maximum Subarray Sum II.cpp")
 add_executable(Sliding_Cost "X 2. Sorting and Searching/X 33. Sliding Cost.cpp")
-add_executable(Path_Queries "X 6. Tree Algorithms/Y 121. Path Queries.cpp")
+add_executable(Path_Queries "X 6. Tree Algorithms/Y 11. Path Queries.cpp")
 add_executable(Increasing_Subsequence "X 3. Dynamic Programming/X 57. Increasing Subsequence.cpp")
 add_executable(Gray_Code "X 1. Introductory Problems/X 13. Gray Code.cpp")
 set_target_properties(Gray_Code PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/X 1. Introductory Problems")
@@ -133,3 +130,9 @@ add_executable(Dynamic_Range_Sum_Queries "X 5. Range Queries/Y 3. Dynamic Range 
 set_target_properties(Dynamic_Range_Sum_Queries PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/X 5. Range Queries")
 add_executable(Distinct_Values_Queries "X 5. Range Queries/Y 14. Distinct Values Queries.cpp")
 set_target_properties(Distinct_Values_Queries PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/X 5. Range Queries")
+add_executable(Subtree_Queries "X 6. Tree Algorithms/Y 10. Subtree Queries.cpp")
+set_target_properties(Subtree_Queries PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/X 6. Tree Algorithms")
+add_executable(Company_Queries_II "X 6. Tree Algorithms/X 7. Company Queries II.cpp")
+set_target_properties(Company_Queries_II PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/X 6. Tree Algorithms")
+add_executable(Tree_Matching "X 6. Tree Algorithms/Y 2. Tree Matching.cpp")
+set_target_properties(Tree_Matching PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/X 6. Tree Algorithms")
