--- a/USACOW/CMakeLists.txt
+++ b/USACOW/CMakeLists.txt
@@ -262,8 +262,8 @@ add_executable(checklist "Past Contests/2016 - 2017/Gold/X 1. 2016 December Gold
 set_target_properties(checklist PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2016 - 2017/Gold/X 1. 2016 December Gold/Y 2. Cow Checklist")
 add_executable(nocross "Past Contests/2016 - 2017/Gold/Y 3. 2017 February Gold/Y 2. Why Did the Cow Cross the Road II/nocross.cpp")
 set_target_properties(nocross PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2016 - 2017/Gold/Y 3. 2017 February Gold/Y 2. Why Did the Cow Cross the Road II")
-add_executable(palpath_gold "Past Contests/2014 - 2015/Gold/X 2. Palindromic Paths/palpath_gold.cpp")
-set_target_properties(palpath_gold PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2014 - 2015/Gold/X 2. Palindromic Paths")
+add_executable(palpath_gold "Past Contests/2014 - 2015/Gold/X 4. 2015 US Open Gold/X 2. Palindromic Paths/palpath_gold.cpp")
+set_target_properties(palpath_gold PROPERTIES RUNTIME_OUTPUT_DIRECTORY "Past Contests/2014 - 2015/Gold/X 4. 2015 US Open Gold/X 2. Palindromic Paths")
 add_executable(sleepy "Past Contests/2018 - 2019/Gold/Y 2. 2019 January Gold/Y 2. Sleepy Cow Sorting/sleepy.cpp")
 set_target_properties(sleepy PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2018 - 2019/Gold/Y 2. 2019 January Gold/Y 2. Sleepy Cow Sorting")
 add_executable(mincross "Past Contests/2016 - 2017/Platinum/X 3. 2017 February Platinum/mincross.cpp")
@@ -370,3 +370,5 @@ add_executable(mooves_gold "Past Contests/2020 - 2021/Gold/X 2. 2021 January Gol
 set_target_properties(mooves_gold PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2020 - 2021/Gold/X 2. 2021 January Gold/Y 3. Dance Mooves")
 add_executable(cbarn2 "Past Contests/2015 - 2016/Gold/X 3. 2016 February Gold/Y 2. Circular Barn Revisited/cbarn2.cpp")
 set_target_properties(cbarn2 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2015 - 2016/Gold/X 3. 2016 February Gold/Y 2. Circular Barn Revisited")
+add_executable(hopscotch_gold "Past Contests/2014 - 2015/Gold/X 3. 2015 February Gold/X 1. Cow Hopscotch/hopscotch_gold.cpp")
+set_target_properties(hopscotch_gold PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2014 - 2015/Gold/X 3. 2015 February Gold/X 1. Cow Hopscotch")
