Codeforces Educational Round 104

--- a/POI/CMakeLists.txt
+++ b/POI/CMakeLists.txt
@@ -13,3 +13,5 @@ add_executable(SAB "Y Sabotage/SAB.cpp")
 set_target_properties(SAB PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Y Sabotage/Y Sabotage")
 add_executable(HOT "X Hotels/HOT.cpp")
 set_target_properties(HOT PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/X Hotels")
+add_executable(MAF "X Mafia/MAF.cpp")
+set_target_properties(MAF PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/X Mafia")
