Solved AC Subtree

--- a/AtCoder/Educational DP Contest/CMakeLists.txt
+++ b/AtCoder/Educational DP Contest/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.17)
 project(Educational_DP_Contest)
 
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG")
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DLOCAL")
 set(GCC_COVERAGE_COMPILE_FLAGS "-Wshadow -Wall -o -fsanitize=address -fsanitize=undefined -D_GLIBCXX_DEBUG -g")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
 
@@ -27,8 +27,9 @@ add_executable(R-Walk "X R - Walk.cpp")
 add_executable(S-Digit_Sum "X S - Digit Sum.cpp")
 add_executable(T-Permutation "X T - Permutation.cpp")
 add_executable(U-Grouping "X U - Grouping.cpp")
-add_executable(V-Subtree "X V - Subtree.cpp")
 add_executable(W-Intervals "X W - Intervals.cpp")
 add_executable(X-Tower "X X - Tower.cpp")
 add_executable(Y-Grid_2 "X Y - Grid 2.cpp")
 add_executable(Z-Frog_3 "X Z - Frog 3.cpp")
+add_executable(V-Subtree "X V - Subtree.cpp")
+set_target_properties(V-Subtree PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")
