Solved AC Subtree

--- a/AtCoder/Educational DP Contest/CMakeLists.txt
+++ b/AtCoder/Educational DP Contest/CMakeLists.txt
@@ -31,5 +31,5 @@ add_executable(W-Intervals "X W - Intervals.cpp")
 add_executable(X-Tower "X X - Tower.cpp")
 add_executable(Y-Grid_2 "X Y - Grid 2.cpp")
 add_executable(Z-Frog_3 "X Z - Frog 3.cpp")
-add_executable(V-Subtree "X V - Subtree.cpp")
+add_executable(V-Subtree "Y V - Subtree.cpp")
 set_target_properties(V-Subtree PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")
