--- a/CSES/CMakeLists.txt
+++ b/CSES/CMakeLists.txt
@@ -14,9 +14,9 @@ add_executable(Sliding_Median "X 2. Sorting and Searching/Y 32. Sliding Median.c
 add_executable(Message_Route "X 4. Graph Algorithms/Y 4. Message Route.cpp")
 add_executable(Counting_Rooms "X 4. Graph Algorithms/Y 1. Counting Rooms.cpp")
 add_executable(Labyrinth "X 4. Graph Algorithms/Y 2. Labyrinth.cpp")
-add_executable(Coin_Combinations_I  "X 3. Dynamic Programming/Y 46. Coin Combinations I.cpp")
-add_executable(Coin_Combinations_II "X 3. Dynamic Programming/Y 47. Coin Combinations II.cpp")
-add_executable(Minimizing_Coins "X 3. Dynamic Programming/Y 45. Minimizing Coins.cpp")
+add_executable(Coin_Combinations_I  "X 3. Dynamic Programming/Y 3. Coin Combinations I.cpp")
+add_executable(Coin_Combinations_II "X 3. Dynamic Programming/Y 4. Coin Combinations II.cpp")
+add_executable(Minimizing_Coins "X 3. Dynamic Programming/Y 2. Minimizing Coins.cpp")
 add_executable(Playlist "X 2. Sorting and Searching/Y 13. Playlist.cpp")
 add_executable(Course_Schedule "X 4. Graph Algorithms/Y 15. Course Schedule.cpp")
 add_executable(Longest_Flight_Route "X 4. Graph Algorithms/Y 16. Longest Flight Route.cpp")
@@ -48,20 +48,20 @@ add_executable(Creating_Strings_I "X 1. Introductory Problems/Y 15. Creating Str
 add_executable(Apartments "X 2. Sorting and Searching/Y 2. Apartments.cpp")
 add_executable(Concert_Tickets "X 2. Sorting and Searching/Y 4. Concert Tickets.cpp")
 add_executable(Restaurant_Customers "X 2. Sorting and Searching/Y 5. Restaurant Customers.cpp")
-add_executable(Dice_Combinations "X 3. Dynamic Programming/Y 44. Dice Combinations.cpp")
+add_executable(Dice_Combinations "X 3. Dynamic Programming/Y 1. Dice Combinations.cpp")
 add_executable(Course_Schedule_II "X 11. Additional Problems/X 47. Course Schedule II.cpp")
 add_executable(Investigation "X 4. Graph Algorithms/Y 18. Investigation.cpp")
 add_executable(Subordinates "X 6. Tree Algorithms/Y 1. Subordinates.cpp")
 add_executable(Tree_Diameter "X 6. Tree Algorithms/Y 3. Tree Diameter.cpp")
 add_executable(Tree_Distances_I "X 6. Tree Algorithms/Y 4. Tree Distances I.cpp")
-add_executable(Removing_Digits "X 3. Dynamic Programming/Y 48. Removing Digits.cpp")
-add_executable(Grid_Paths_1 "X 3. Dynamic Programming/Y 49. Grid Paths.cpp")
+add_executable(Removing_Digits "X 3. Dynamic Programming/Y 5. Removing Digits.cpp")
+add_executable(Grid_Paths_1 "X 3. Dynamic Programming/Y 6. Grid Paths.cpp")
 add_executable(Subarray_Sums_I "X 2. Sorting and Searching/Y 27. Subarray Sums I.cpp")
 add_executable(Exponentiation "X 7. Mathematics/Y 2. Exponentiation.cpp")
 add_executable(Two_Sets "X 1. Introductory Problems/Y 8. Two Sets.cpp")
 add_executable(Movie_Festival "X 2. Sorting and Searching/Y 6. Movie Festival.cpp")
 add_executable(Road_Reparation "X 4. Graph Algorithms/Y 22. Road Reparation.cpp")
-add_executable(Book_Shop "X 3. Dynamic Programming/Y 50. Book Shop.cpp")
+add_executable(Book_Shop "X 3. Dynamic Programming/Y 7. Book Shop.cpp")
 add_executable(Road_Construction "X 4. Graph Algorithms/Y 23. Road Construction.cpp")
 add_executable(Chessboard_and_Queens "X 1. Introductory Problems/Y 17. Chessboard and Queens.cpp")
 add_executable(Grid_Paths_0 "X 1. Introductory Problems/X 19. Grid Paths.cpp")
@@ -74,10 +74,10 @@ add_executable(Tasks_and_Deadlines "X 2. Sorting and Searching/Y 22. Tasks and D
 add_executable(Stick_Lengths "X 2. Sorting and Searching/Y 9. Stick Lengths.cpp")
 add_executable(Ferris_Wheel "X 2. Sorting and Searching/Y 3. Ferris Wheel.cpp")
 add_executable(Room_Allocation "X 2. Sorting and Searching/Y 20. Room Allocation.cpp")
-add_executable(Money_Sums "X 3. Dynamic Programming/Y 54. Money Sums.cpp")
+add_executable(Money_Sums "X 3. Dynamic Programming/Y 12. Money Sums.cpp")
 add_executable(Flight_Routes_Check "X 4. Graph Algorithms/Y 24. Flight Routes Check.cpp")
 add_executable(Planets_Queries_I "X 4. Graph Algorithms/Y 19. Planets Queries I.cpp")
-add_executable(Array_Description "X 3. Dynamic Programming/Y 51. Array Description.cpp")
+add_executable(Array_Description "X 3. Dynamic Programming/Y 8. Array Description.cpp")
 add_executable(Graph_Girth "X 11. Additional Problems/Y 17. Graph Girth.cpp")
 add_executable(Traffic_Lights "X 2. Sorting and Searching/Y 15. Traffic Lights.cpp")
 add_executable(Bit_Inversions "X 11. Additional Problems/Y 26. Bit Inversions.cpp")
@@ -88,22 +88,22 @@ add_executable(Tree_Distances_II "X 6. Tree Algorithms/Y 5. Tree Distances II.cp
 add_executable(Movie_Festival_II "X 2. Sorting and Searching/Y 34. Movie Festival II.cpp")
 add_executable(Stick_Divisions "X 11. Additional Problems/X 65. Stick Divisions.cpp")
 add_executable(Number_Spiral "X 1. Introductory Problems/Y 6. Number Spiral.cpp")
-add_executable(Two_Sets_II "X 3. Dynamic Programming/Y 56. Two Sets II.cpp")
+add_executable(Two_Sets_II "X 3. Dynamic Programming/Y 14. Two Sets II.cpp")
 add_executable(List_Removals "X 5. Range Queries/Y 9. List Removals.cpp")
 add_executable(Salary_Queries "X 5. Range Queries/Y 10. Salary Queries.cpp")
 add_executable(Increasing_Subsequence_II "X 11. Additional Problems/Y 24. Increasing Subsequence II.cpp")
 add_executable(Company_Queries_I "X 6. Tree Algorithms/Y 6. Company Queries I.cpp")
 add_executable(Common_Divisors "X 7. Mathematics/Y 5. Common Divisors.cpp")
 add_executable(Hotel_Queries "X 5. Range Queries/Y 8. Hotel Queries.cpp")
-add_executable(Edit_Distance "X 3. Dynamic Programming/Y 52. Edit Distance.cpp")
-add_executable(Rectangle_Cutting "X 3. Dynamic Programming/Y 53. Rectangle Cutting.cpp")
-add_executable(Removal_Game "X 3. Dynamic Programming/Y 55. Removal Game.cpp")
+add_executable(Edit_Distance "X 3. Dynamic Programming/Y 10. Edit Distance.cpp")
+add_executable(Rectangle_Cutting "X 3. Dynamic Programming/Y 11. Rectangle Cutting.cpp")
+add_executable(Removal_Game "X 3. Dynamic Programming/X 13. Removal Game.cpp")
 add_executable(Coding_Company "X 11. Additional Problems/X 66. Coding Company.cpp")
 add_executable(Hamiltonian_Flights "X 4. Graph Algorithms/Y 31. Hamiltonian Flights.cpp")
 add_executable(Maximum_Subarray_Sum_II "X 2. Sorting and Searching/Y 35. Maximum Subarray Sum II.cpp")
 add_executable(Sliding_Cost "X 2. Sorting and Searching/X 33. Sliding Cost.cpp")
 add_executable(Path_Queries "X 6. Tree Algorithms/Y 11. Path Queries.cpp")
-add_executable(Increasing_Subsequence "X 3. Dynamic Programming/X 57. Increasing Subsequence.cpp")
+add_executable(Increasing_Subsequence "X 3. Dynamic Programming/X 15. Increasing Subsequence.cpp")
 add_executable(Gray_Code "X 1. Introductory Problems/X 13. Gray Code.cpp")
 set_target_properties(Gray_Code PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/X 1. Introductory Problems")
 add_executable(Monsters "X 4. Graph Algorithms/Y 7. Monsters.cpp")
