--- a/USACOW/CMakeLists.txt
+++ b/USACOW/CMakeLists.txt
@@ -43,7 +43,6 @@ add_executable(cowdance "Past Contests/2016 - 2017/Silver/Y 2. 2017 January Silv
 add_executable(cownomics "Past Contests/2016 - 2017/Silver/Y 4. 2017 US Open Silver/Y 2. Bovine Genomics/cownomics.cpp")
 add_executable(convention2 "Past Contests/2018 - 2019/Silver/Y 1. 2018 December Silver/Y 2. Convention II/convention2.cpp")
 add_executable(haybales "Past Contests/2016 - 2017/Silver/Y 1. 2016 December Silver/Y 1. Counting Haybales/haybales.cpp")
-add_executable(div7 "Past Contests/2015 - 2016/Silver/Y 2. 2016 January Silver/Y 2. Subsequences Summing to Sevens/div7.cpp")
 add_executable(rental "Past Contests/2017 - 2018/Silver/X 2. 2018 January Silver/X 2. Rental Service/rental.cpp")
 add_executable(cow "Past Contests/2014 - 2015/Bronze/X 3. 2014 February Bronze/Y 2. COW/cow.cpp")
 add_executable(typo "Past Contests/2012 - 2013/Bronze/Y 1. 2012 November Bronze/Y 2. Typo/typo.cpp")
@@ -372,3 +371,7 @@ add_executable(cbarn2 "Past Contests/2015 - 2016/Gold/X 3. 2016 February Gold/Y 
 set_target_properties(cbarn2 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2015 - 2016/Gold/X 3. 2016 February Gold/Y 2. Circular Barn Revisited")
 add_executable(hopscotch_gold "Past Contests/2014 - 2015/Gold/X 3. 2015 February Gold/X 1. Cow Hopscotch/hopscotch_gold.cpp")
 set_target_properties(hopscotch_gold PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2014 - 2015/Gold/X 3. 2015 February Gold/X 1. Cow Hopscotch")
+add_executable(div7 "Past Contests/2015 - 2016/Silver/Y 2. 2016 January Silver/Y 2. Subsequences Summing to Sevens/div7.cpp")
+set_target_properties(div7 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2015 - 2016/Silver/Y 2. 2016 January Silver/Y 2. Subsequences Summing to Sevens")
+add_executable(cowjog_gold "Past Contests/2014 - 2015/Gold/X 1. 2014 December Gold/X 3. Cow Jog/cowjog_gold.cpp")
+set_target_properties(cowjog_gold PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2014 - 2015/Gold/X 1. 2014 December Gold/X 3. Cow Jog")
