Solved CSES Stick Divisions

--- a/CSES/CMakeLists.txt
+++ b/CSES/CMakeLists.txt
@@ -4,9 +4,8 @@ project(CSES)
 set(CMAKE_CXX_STANDARD 17)
 
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DLOCAL")
-set(GCC_COVERAGE_COMPILE_FLAGS "-Wall -Wextra -O2 -Wshadow -fsanitize=address -fsanitize=undefined")
-set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
-
+set(GCC_COVERAGE_COMPILE_FLAGS "-Wshadow -Wall -o -fsanitize=address -fsanitize=undefined -D_GLIBCXX_DEBUG -g")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
 
 add_executable(Weird_Algorithm "X 1. Introductory Problems/Y 1. Weird Algorithm.cpp")
 add_executable(Missing_Number "X 1. Introductory Problems/Y 2. Missing Number.cpp")
@@ -88,7 +87,6 @@ add_executable(Subarray_Divisibility "X 2. Sorting and Searching/Y 29. Subarray 
 add_executable(Forest_Queries "X 5. Range Queries/Y 7. Forest Queries.cpp")
 add_executable(Tree_Distances_II "X 6. Tree Algorithms/Y 5. Tree Distances II.cpp")
 add_executable(Movie_Festival_II "X 2. Sorting and Searching/Y 34. Movie Festival II.cpp")
-add_executable(Stick_Divisions "X 11. Additional Problems/X 65. Stick Divisions.cpp")
 add_executable(Number_Spiral "X 1. Introductory Problems/Y 6. Number Spiral.cpp")
 add_executable(Two_Sets_II "X 3. Dynamic Programming/Y 14. Two Sets II.cpp")
 add_executable(List_Removals "X 5. Range Queries/Y 9. List Removals.cpp")
@@ -127,8 +125,6 @@ add_executable(Line_Segment_Intersection "X 9. Geometry/Y 2. Line Segment Inters
 set_target_properties(Line_Segment_Intersection PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/X 9. Geometry")
 add_executable(a a.cpp)
 set_target_properties(a PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/")
-target_precompile_headers(a PUBLIC "/Library/Developer/CommandLineTools/usr/include/c++/v1/bits/stdc++.h")
-
 add_executable(Dynamic_Range_Sum_Queries "X 5. Range Queries/Y 3. Dynamic Range Sum Queries.cpp")
 set_target_properties(Dynamic_Range_Sum_Queries PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/X 5. Range Queries")
 add_executable(Distinct_Values_Queries "X 5. Range Queries/Y 14. Distinct Values Queries.cpp")
@@ -140,4 +136,6 @@ set_target_properties(Company_Queries_II PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${
 add_executable(Tree_Matching "X 6. Tree Algorithms/Y 2. Tree Matching.cpp")
 set_target_properties(Tree_Matching PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/X 6. Tree Algorithms")
 add_executable(Increasing_Subsequence "X 3. Dynamic Programming/Y 15. Increasing Subsequence.cpp")
-set_target_properties(Increasing_Subsequence PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/X 3. Dynamic Programming/")
+set_target_properties(Increasing_Subsequence PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/X 3. Dynamic Programming")
+add_executable(Stick_Divisions "X 11. Additional Problems/Y 65. Stick Divisions.cpp")
+set_target_properties(Stick_Divisions PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/X 11. Additional Problems")
