Reimplement (Copy USACO Guide) CSES Company Queries I

--- a/CSES/CMakeLists.txt
+++ b/CSES/CMakeLists.txt
@@ -92,7 +92,6 @@ add_executable(Two_Sets_II "X 3. Dynamic Programming/Y 14. Two Sets II.cpp")
 add_executable(List_Removals "X 5. Range Queries/Y 9. List Removals.cpp")
 add_executable(Salary_Queries "X 5. Range Queries/Y 10. Salary Queries.cpp")
 add_executable(Increasing_Subsequence_II "X 11. Additional Problems/Y 24. Increasing Subsequence II.cpp")
-add_executable(Company_Queries_I "X 6. Tree Algorithms/Y 6. Company Queries I.cpp")
 add_executable(Common_Divisors "X 7. Mathematics/Y 5. Common Divisors.cpp")
 add_executable(Hotel_Queries "X 5. Range Queries/Y 8. Hotel Queries.cpp")
 add_executable(Edit_Distance "X 3. Dynamic Programming/Y 10. Edit Distance.cpp")
@@ -141,3 +140,7 @@ add_executable(Stick_Divisions "X 11. Additional Problems/Y 65. Stick Divisions.
 set_target_properties(Stick_Divisions PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/X 11. Additional Problems")
 add_executable(Multiplication_Table "X 11. Additional Problems/Y 8. Multiplication Table.cpp")
 set_target_properties(Multiplication_Table PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/X 11. Additional Problems/")
+add_executable(Even_Outdegree_Edges "X 11. Additional Problems/X 7. Even Outdegree Edges.cpp")
+set_target_properties(Even_Outdegree_Edges PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/X 11. Additional Problems")
+add_executable(Company_Queries_I "X 6. Tree Algorithms/Y 6. Company Queries I.cpp")
+set_target_properties(Company_Queries_I PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/X 6. Tree Algorithms")
