Solved USACO Cowland

--- a/USACOW/CMakeLists.txt
+++ b/USACOW/CMakeLists.txt
@@ -269,8 +269,8 @@ add_executable(mincross "Past Contests/2016 - 2017/Platinum/X 3. 2017 February P
 set_target_properties(mincross PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2016 - 2017/Platinum/X 3. 2017 February Platinum")
 add_executable(brute_minforce "Past Contests/2016 - 2017/Platinum/X 3. 2017 February Platinum/brute_minforce.cpp")
 set_target_properties(brute_minforce PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2016 - 2017/Platinum/X 3. 2017 February Platinum")
-add_executable(cowland "Past Contests/2018 - 2019/Gold/X 3. 2019 February Gold/X 1. Cow Land/cowland.cpp")
-set_target_properties(cowland PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2018 - 2019/Gold/X 3. 2019 February Gold/X 1. Cow Land")
+add_executable(cowland "Past Contests/2018 - 2019/Gold/X 3. 2019 February Gold/Y 1. Cow Land/cowland.cpp")
+set_target_properties(cowland PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2018 - 2019/Gold/X 3. 2019 February Gold/Y 1. Cow Land")
 add_executable(lasers "Past Contests/2016 - 2017/Gold/X 1. 2016 December Gold/Y 3. Lasers and Mirrors/lasers.cpp")
 set_target_properties(lasers PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Past Contests/2016 - 2017/Gold/X 1. 2016 December Gold/Y 3. Lasers and Mirrors")
 add_executable(cownav "Past Contests/2016 - 2017/Gold/X 2. 2017 January Gold/Y 3. Cow Navigation/cownav.cpp")
